@@ -5,15 +5,15 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.List;
 
 public class FileSaverBinary implements FileSaver {
     @Override
-    public void saveFile(Computer computer, boolean semicolon) throws IOException {
+    public void saveFile(Parts parts, boolean semicolon) throws IOException {
         Path path = Paths.get("binaryfile.txt");
-        byte[] bytes = computer.toString().getBytes(StandardCharsets.UTF_8);
 
         try {
-            Files.write(path, bytes);
+            Files.writeString(path, parts.toString());
         }catch (IOException e){
             e.printStackTrace();
         }
